Adding client build to source control

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-
+    "heroku-postbuild": "npm install && cd client && npm install && cd ..",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
