--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^4.0.1",
     "create-react-class": "^15.6.3",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
