--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react": "^16.5.2",
@@ -32,7 +33,6 @@
     "react-dom": "^16.5.2",
     "react-stripe-elements": "^2.0.1",
     "stripe": "^6.12.1",
-    "validator": "^10.8.0",
-    "nodemon": "^1.18.4"
+    "validator": "^10.8.0"
   }
 }
